--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="game" id="game">
             <canvas id="canvas" width="700px" height="400px"></canvas>
         </div>
+        <div id="snackbar">Some text some message..</div>
     </div>
 
     <template>
